--- a/assests/css/stylesheet.css
+++ b/assests/css/stylesheet.css
@@ -1,8 +1,9 @@
 /* 
 color theme: 
-  green #12171C,
-  lightgreen: #D3FBD8,
-  turquoise: #00C6B4
+  vanilla #fff6ff,
+  lightbrown: #d5cabd,
+  purple: #845ec2,
+  lightpurple: #9b89b3
 */
 
 #banner {
@@ -47,6 +48,7 @@ color theme:
 }
 
 .blog {
+  background-color: #12171C;
   border: .035em solid #fff;
   border-radius: 0.5rem;
   padding: .5em;
@@ -57,7 +59,7 @@ color theme:
 }
 
 .blog:hover {
-  box-shadow: 0.5rem 0.5rem black, -0.5rem -0.5rem #fff;
+  box-shadow: 0.5rem 0.5rem black;
 }
 
 .column {
@@ -173,7 +175,6 @@ body {
   width: 66%;
 }
 
-
 html {
   height: 100%;
   width: 100%;
@@ -228,78 +229,3 @@ nav > ul > li {
   display: inline;
   margin: .25em;
 }
-
-/* --------------------Media Queries-------------------- */
-@media screen and (max-width: 720px) and (min-width: 320px) {
-  p {
-    font-size: 16px;
-  }
-
-  /* this is to ensure the nav menu is easy for the user to click and large enough to not be a problem */
-  nav > ul > li {
-    font-size: 14px;
-    display: block;
-    padding: .1em;
-  }
-}
-
-@media screen and (max-width: 1366px) and (min-width: 720px) {
-  img {
-    max-height: 15em;
-    max-width: 15em;
-  }
-
-  nav > ul {
-    text-align: center;
-  }
-  
-  /* navmenu is is inlined and centered with padding to create seperation */
-  nav > ul > li {
-    display: inline;
-    padding-left: 1em;
-  }
-
-  /* snake images removed from the normal doc flow to save vertical space on tablets */
-  .service_snakes {
-    float: right;
-  }
-}
-
-@media screen and (max-width: 1920px) and (min-width: 1366px) {
-  * {
-    box-sizing: border-box;
-  }
-
-  body {
-    width: 66%;
-  }
-
-  /* with changes made to services page the hr needed a clear command to keep the normal doc flow together */
-  hr {
-    clear: left;
-  }
-
-  nav > ul {
-    text-align: left;
-  }
-
-  nav > ul > li {
-    display: inline;
-    padding-left: 1em;
-  }
-
-  .service_snakes {
-    float: right;
-  }
-
-  /* columns are constructed for each service tier with padding, margins and width to make them pleasant and easy to see
-    this was made to utilize the wider screen size of desktop/laptops */
-  .column {
-    float: left;
-    padding: 0.5em;
-    margin-left: .75em;
-    margin-bottom: 1em;
-    width: 32%;
-  }
-}
-/* End of Media Queries */
