--- a/assests/css/stylesheet.css
+++ b/assests/css/stylesheet.css
@@ -34,6 +34,11 @@ color theme:
   text-align: center;
 }
 
+#map {
+  min-height:300px;
+  width:500px;
+}
+
 #tier, #month {
   margin: 0;
   padding: 0;
