--- a/assests/css/stylesheet.css
+++ b/assests/css/stylesheet.css
@@ -34,6 +34,11 @@ color theme:
   text-align: center;
 }
 
+#hero {
+  border: 2px solid #000;
+  margin: 20px;
+}
+
 #map {
   min-height:300px;
   width:500px;
@@ -43,6 +48,11 @@ color theme:
   margin: 0;
   padding: 0;
   list-style: none;
+}
+
+#txt_hero {
+  font-size: 2rem;
+  margin-bottom: 2rem;
 }
 
 #selected {
